# Conway-s-Game-of-Life

./: .gitignore  Cargo.toml
apps/tui/: Cargo.toml
apps/tui/src/: main.rs  tui.rs
core/: Cargo.toml
core/src/: board.rs  lib.rs  logic.rs
src/: main.rs
src/game/: board.rs  logic.rs  mod.rs  tui.rs
