[package]
name = "game_of_life_tui"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25.0"
once_cell = "1.16"

[dependencies.game_of_life]
path = "../../core"